--- a/app/sober-driver.html
+++ b/app/sober-driver.html
@@ -55,10 +55,10 @@
                 <p class="text-white fs16 font-weight-normal text-center text-lg-left my-2 my-lg-0 mt-lg-2">Мы пришлем Вам опытного водителя, который доставит
                     <br>Вас и ваше авто домой после дружеской встречи в баре или праздничного застолья!</p>
             </div>
-            <div class="sober-content row d-flex justify-content-between align-items-center">
-                <div class="sober-left col-lg-4">
+            <div class="sober-content row d-flex justify-content-center align-items-center">
+                <div class="sober-left col-sm-6 col-lg-4">
                     <div class="gt-rate-block ">
-                        <div class="gt-rate-tabs pt-3">
+                        <div class="gt-rate-tabs py-3">
                             <div class="rate-tabs bg-white">
                                 <h3 class="rate-title text-dark text-center fs24 pt-4">Трезвый водитель</h3>
                                 <p class="rate-subtitle text-dark text-center fs18 font-weight-normal mt-2 pb-2">Заберём из любой точки</p>
@@ -66,12 +66,12 @@
                                 <p class="text-dark text-center fs18 mb-0">90р километр</p>
                                 <p class="text-dark text-center fs18 mb-4">90р минута пути</p>
                                 <hr class="mx-2">
-                                <p class="text-dark text-center fs36 font-weight-bold pb-3"> от 500Р </p>
+                                <p class="text-dark text-center fs36 font-weight-bold pb-3 mb-0"> от 500Р </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="sober-right bg-white col-lg-8">
+                <div class="sober-right bg-white col-sm-6 col-lg-8">
                     <div class="zakaz-taxi-title mt-2">
                         <h3 class="text-left fs24 font-weight-bold pl-2 py-2">Закажи такси прямо сейчас</h3>
                     </div>
@@ -79,7 +79,6 @@
                         <div class="d-inline d-lg-flex align-items-center justify-content-between col-lg-12">
                             <input type="text" placeholder="Откуда" class="zakaz-taxi-form mt-2 py-4 col-12 col-lg-5 ml-lg-3">
                             <input type="text" placeholder="Куда" class="zakaz-taxi-form my-4 my-lg-0 mt-lg-2 py-4 col-12 col-lg-5">
-
                         </div>
                         <div class="d-inline d-lg-flex align-items-center justify-content-between col-lg-12">
                             <input type="text" placeholder="+7(911) 123-45-67" class="zakaz-taxi-form my-lg-4 py-4 ml-lg-3 col-12 col-lg-5">
