--- a/app/taxi-area.html
+++ b/app/taxi-area.html
@@ -63,7 +63,7 @@
                         <p class="text-dark text-center fs18 mb-0">45р километр</p>
                         <p class="text-dark text-center fs18 mb-0 pb-3">25р минута пути</p>
                         <hr class="mx-4 my-3">
-                        <p class="text-dark text-center fs36 font-weight-bold pb-3"> от 50Р </p>
+                        <p class="text-dark text-center fs36 font-weight-bold pb-4 mb-0"> от 50Р </p>
                     </div>
                     <div class="rate-button py-4">
                         <button class="btn btn-orange py-4 w-100">Заказать</button>
