--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
 					</div>
 					<div class="button-section w-100 mt-auto bg-light py-5 mr-md-4 pr-md-2">
 						<p class="up-button-text text-dark fs18 font-weight-normal text-center text-md-left ">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
-						<button class="btn btn-orange col-12 col-md-9 py-4 w-100">Заказать такси сейчас</button>
+						<button class="btn btn-orange col-12 col-md-9 py-4 w-100" data-toggle="modal" data-target="#exampleModal">Заказать такси сейчас</button>
 					</div>
                 </div>
 				<!-- Услуги -->
@@ -418,6 +418,44 @@
 	</ul>
 </nav>
 <!--Мобильная навигация. Конец-->
+<!--Модальное окно. Начало-->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<form>
+					<div class="form-group">
+						<label for="exampleInputEmail1">Email address</label>
+						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+						<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">Password</label>
+						<input type="password" class="form-control" id="exampleInputPassword1">
+					</div>
+					<div class="form-group form-check">
+						<input type="checkbox" class="form-check-input" id="exampleCheck1">
+						<label class="form-check-label" for="exampleCheck1">Check me out</label>
+					</div>
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			</div>
+		</div>
+	</div>
+</div>
+<!--Модальное окно. Конец-->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="libs/bootstrap-4.5.2-dist/js/bootstrap.bundle.js"></script>
 <script src="js/app.min.js"></script>
 </body>
 </html>
