тёмкины доп квесты

--- a/app/index.html
+++ b/app/index.html
@@ -263,19 +263,19 @@
 	</section>
 	<!-- Наши тарифы. Конец. -->
 	<!-- Первые в Нижнем. Начало. -->
-	<section class="first pt-5">
+	<section class="first pt-lg-5 py-4 py-lg-0 my-4 my-lg-0">
 		<div class="container">
-			<div class="first-title pb-3">
-				<h2 class="text-dark fs48 font-weight-bold text-center text-md-left">Первые <span class="text-orange fs48 font-weight-bold">в Нижнем</span></h2>
+			<div class="first-title pb-lg-3">
+				<h2 class="text-white text-lg-dark fs48 font-weight-bold text-center text-lg-left">Первые <span class="text-white text-lg-orange fs48 font-weight-bold">в Нижнем</span></h2>
 			</div>
-			<div class="first-content row d-flex justify-content-center my-4">
-				<div class="first-content-text col-12 col-lg-6 bg-light py-3 mt-auto">
-					<p class="text-dar fs24 font-weight-normal text-center text-md-left pt-lg-4 pr-2">Мы занимаемся перевозками пассажиров с 1997 года! Все наши водители - местные и прекрасно знают город.</p>
-					<p class="text-dark fs24 font-weight-normal text-center text-md-left mb-0 py-lg-4 pr-2">Поездка с нами - это прежде всего Ваша безопасность и комфорт.</p>
+			<div class="first-content row d-flex justify-content-center my-lg-4">
+				<div class="first-content-text col-12 col-lg-6 bg-light pb-3 mt-auto">
+					<hr class="d-flex d-lg-none border-white">
+					<p class="text-dark fs24 font-weight-normal text-center text-lg-left pt-lg-4 pr-2">Мы занимаемся перевозками пассажиров с 1997 года! Все наши водители - местные и прекрасно знают город.</p>
+					<p class="text-dark fs24 font-weight-normal text-center text-lg-left mb-0 py-lg-4 pr-2">Поездка с нами - это прежде всего Ваша безопасность и комфорт.</p>
 				</div>
-				<div class="first-content-photo col-12 col-lg-6 mt-4 mt-lg-0">
+				<div class="first-content-photo col-12 col-lg-6">
 					<div class="bg">
-						<div class="bg-vertical"></div>
 					</div>
 				</div>
 			</div>
@@ -313,20 +313,20 @@
 	</section>
 	<!-- Заказжи такси. конец. -->
 	<!-- Не только такси. Начало -->
-	<section class="not-taxi pt-5">
+	<section class="not-taxi pt-lg-5 py-4 py-lg-0 my-4 my-lg-0">
 		<div class="container">
-			<div class="not-taxi-title pb-3">
-				<h2 class="text-dark fs48 font-weight-bold text-center text-md-left">Мы - <span class="text-orange fs48 font-weight-bold">не только такси</span></h2>
+			<div class="not-taxi-title pb-lg-3">
+				<h2 class="text-white text-lg-dark text-center text-lg-left text-lg-left fs48 font-weight-bold">Мы - <span class="text-white text-orange text-center text-lg-left fs48 font-weight-bold">не только такси</span></h2>
 			</div>
-            <div class="not-taxi-content row d-flex justify-content-center my-4">
-                <div class="not-taxi-photo col-12 col-lg-6 mb-4 mb-lg-0">
+            <div class="not-taxi-content row d-flex justify-content-center my-lg-4">
+                <div class="not-taxi-photo col-12 col-lg-6">
                     <div class="bg">
-						<div class="bg-vertical"></div>
 					</div>
                 </div>
-                <div class="not-taxi-text bg-light col-12 col-lg-6 bg-light py-3 mt-auto">
-                    <p class="fs24 font-weight-normal text-center text-md-left pt-lg-4 ">"Огни Нижнего" так же обслуживают свадьбы, корпоративы. В наличии есть комфортные микроавтобусы Mercedes, а так же авто комфорт-класса.</p>
-					<p class="font-weight-bold fs24 text-center text-md-left mb-0 py-lg-4">Возможна безналичная оплата.</p>
+                <div class="not-taxi-text bg-light col-12 col-lg-6 bg-light pb-3 mt-auto">
+					<hr class="d-flex d-lg-none border-white p-0">
+                    <p class="text-dark fs24 font-weight-normal text-center text-lg-left pt-lg-4 pl-2">"Огни Нижнего" так же обслуживают свадьбы, корпоративы. В наличии есть комфортные микроавтобусы Mercedes, а так же авто комфорт-класса.</p>
+					<p class="text-dark fs24 font-weight-normal text-center text-lg-left mb-0 py-lg-4 pl-2">Возможна безналичная оплата.</p>
                 </div>
             </div>
 		</div>
