тёмкины доп квесты вариант 2

--- a/app/index.html
+++ b/app/index.html
@@ -271,8 +271,8 @@
 			<div class="first-content row d-flex justify-content-center my-lg-4">
 				<div class="first-content-text col-12 col-lg-6 bg-light pb-3 mt-auto">
 					<hr class="d-flex d-lg-none border-white">
-					<p class="text-dark fs24 font-weight-normal text-center text-lg-left pt-lg-4 pr-2">Мы занимаемся перевозками пассажиров с 1997 года! Все наши водители - местные и прекрасно знают город.</p>
-					<p class="text-dark fs24 font-weight-normal text-center text-lg-left mb-0 py-lg-4 pr-2">Поездка с нами - это прежде всего Ваша безопасность и комфорт.</p>
+					<p class="text-dark fs24 font-weight-normal text-center text-lg-left mb-0 pt-lg-4 pr-lg-2">Мы занимаемся перевозками пассажиров с 1997 года! Все наши водители - местные и прекрасно знают город.</p>
+					<p class="text-dark fs24 font-weight-normal text-center text-lg-left mb-0 py-lg-4 pr-lg-2">Поездка с нами - это прежде всего Ваша безопасность и комфорт.</p>
 				</div>
 				<div class="first-content-photo col-12 col-lg-6">
 					<div class="bg">
@@ -325,8 +325,8 @@
                 </div>
                 <div class="not-taxi-text bg-light col-12 col-lg-6 bg-light pb-3 mt-auto">
 					<hr class="d-flex d-lg-none border-white p-0">
-                    <p class="text-dark fs24 font-weight-normal text-center text-lg-left pt-lg-4 pl-2">"Огни Нижнего" так же обслуживают свадьбы, корпоративы. В наличии есть комфортные микроавтобусы Mercedes, а так же авто комфорт-класса.</p>
-					<p class="text-dark fs24 font-weight-normal text-center text-lg-left mb-0 py-lg-4 pl-2">Возможна безналичная оплата.</p>
+                    <p class="text-dark fs24 font-weight-normal text-center text-lg-left mb-0 pt-lg-4 pl-lg-2">"Огни Нижнего" так же обслуживают свадьбы, корпоративы. В наличии есть комфортные микроавтобусы Mercedes, а так же авто комфорт-класса.</p>
+					<p class="text-dark fs24 font-weight-normal text-center text-lg-left mb-0 py-lg-4 pl-lg-2">Возможна безналичная оплата.</p>
                 </div>
             </div>
 		</div>
