--- a/app/index.html
+++ b/app/index.html
@@ -97,28 +97,28 @@
 				<h2 class="text-dark fs48 font-weight-bold text-center text-md-left ">Наши<span class="text-orange fs48"> услуги</span></h2>
 			</div>
 			<div class="row mt-4">
-				<article class="col-lg-6 py-2 py-lg-3">
+				<article class="col-md-6 py-2 py-lg-3">
 					<div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-guest.png')">
 						<h1 class="tabs-title text-white fs36">Такси для гостей города</h1>
 						<hr class="border-white my-4">
 						<p class="tabs-text text-white fs18 font-weight-normal mb-0 ">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
 					</div>
 				</article>
-				<article class="col-lg-6 py-2 py-lg-3">
+				<article class="col-md-6 py-2 py-lg-3">
 					<div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-nn.png')">
 						<h1 class="tabs-title text-white fs36">Такси для новгородцев</h1>
 						<hr class="border-white my-4">
 						<p class="tabs-text text-white fs18 font-weight-normal mb-0 ">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
 					</div>
 				</article>
-				<article class="col-lg-6 py-2 py-lg-3">
+				<article class="col-md-6 py-2 py-lg-3">
 					<div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-rus.png')">
 						<h1 class="tabs-title text-white fs36">Такси по области и РФ</h1>
 						<hr class="border-white my-4">
 						<p class="tabs-text text-white fs18 font-weight-normal mb-0 ">Таким образом рамки и место обучения кадров способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.</p>
 					</div>
 				</article>
-				<article class="col-lg-6 py-2 py-lg-3">
+				<article class="col-md-6 py-2 py-lg-3">
 					<div class="uslugi-item bg-light py-5 px-4 text-center" style="background-image: url('/img/dest/uslugi-tabs-sober.png')">
 						<h1 class="tabs-title text-white fs36">Услуга "трезвый водитель"</h1>
 						<hr class="border-white my-4">
@@ -166,25 +166,25 @@
 				<h2 class="fs48 font-weight-bold text-center text-md-left">Почему <span class="text-orange fs48 font-weight-bold">мы?</span></h2>
 			</div>
 			<div class="why-us-tabs-section row d-flex justify-content-center align-items-center">
-				<div class="why-us-tabs col-lg-3 py-4">
+				<div class="why-us-tabs col-md-6 col-lg-3 py-4">
 					<div class="d-flex justify-content-center">
 						<img src="img/why-car-icon.svg" alt="">
 					</div>
 					<h3 class="fs24 text-center font-weight-normal py-3">Автомобили Премиум класса</h3>
 				</div>
-				<div class="why-us-tabs col-lg-3 py-4">
+				<div class="why-us-tabs col-md-6 col-lg-3 py-4">
 					<div class="d-flex justify-content-center">
 						<img src="img/why-lowprice-icon.svg" alt="">
 					</div>
 					<h3 class="fs24 text-center font-weight-normal py-3">Цены от 50 Р по городу</h3>
 				</div>
-				<div class="why-us-tabs col-lg-3 py-4">
+				<div class="why-us-tabs col-md-6 col-lg-3 py-4">
 					<div class="d-flex justify-content-center">
 						<img src="img/why-time-icon.svg" alt="">
 					</div>
 					<h3 class="fs24 text-center font-weight-normal py-3">Всегда <br> вовремя</h3>
 				</div>
-				<div class="why-us-tabs col-lg-3 py-4">
+				<div class="why-us-tabs col-md-6 col-lg-3 py-4">
 					<div class="d-flex justify-content-center">
 						<img src="img/why-license-icon.svg" alt="">
 					</div>
