тёмкины доп квесты вариант 5

--- a/app/index.html
+++ b/app/index.html
@@ -91,7 +91,7 @@
 	</section>
 	<!-- Баннер. конец. -->
 	<!-- Наши услуги. Начало. -->
-	<section class="uslugi pt-5">
+	<section class="uslugi py-5">
 		<div class="container">
 			<div class="uslugi-title pb-3">
 				<h2 class="text-dark fs48 font-weight-bold text-center text-md-left ">Наши<span class="text-orange fs48"> услуги</span></h2>
@@ -130,7 +130,7 @@
 	</section>
 	<!-- Наши услуги. конец. -->
 	<!-- Заказжи такси. Начало. -->
-	<section class="zakaz-taxi pt-5 bg-light">
+	<section class="zakaz-taxi py-5 bg-light">
 		<div class="container">
 			<div class="zakaz-taxi-title pb-3">
 				<h3 class="text-left fs24 font-weight-bold text-center text-md-left">Закажи такси прямо сейчас</h3>
@@ -160,31 +160,31 @@
 	</section>
 	<!-- Заказжи такси. конец. -->
 	<!-- Почему мы. Начало. -->
-	<section class="why-us pt-5">
+	<section class="why-us py-5">
 		<div class="container">
 			<div class="why-us-title pb-3">
 				<h2 class="fs48 font-weight-bold text-center text-md-left">Почему <span class="text-orange fs48 font-weight-bold">мы?</span></h2>
 			</div>
 			<div class="why-us-tabs-section row d-flex justify-content-center align-items-center">
-				<div class="why-us-tabs col-md-6 col-lg-3 py-4">
+				<div class="why-us-tabs col-md-6 col-lg-3 pt-4">
 					<div class="d-flex justify-content-center">
 						<img src="img/why-car-icon.svg" alt="">
 					</div>
 					<h3 class="fs24 text-center font-weight-normal py-3">Автомобили Премиум класса</h3>
 				</div>
-				<div class="why-us-tabs col-md-6 col-lg-3 py-4">
+				<div class="why-us-tabs col-md-6 col-lg-3 pt-4">
 					<div class="d-flex justify-content-center">
 						<img src="img/why-lowprice-icon.svg" alt="">
 					</div>
 					<h3 class="fs24 text-center font-weight-normal py-3">Цены от 50 Р по городу</h3>
 				</div>
-				<div class="why-us-tabs col-md-6 col-lg-3 py-4">
+				<div class="why-us-tabs col-md-6 col-lg-3 pt-4">
 					<div class="d-flex justify-content-center">
 						<img src="img/why-time-icon.svg" alt="">
 					</div>
 					<h3 class="fs24 text-center font-weight-normal py-3">Всегда <br> вовремя</h3>
 				</div>
-				<div class="why-us-tabs col-md-6 col-lg-3 py-4">
+				<div class="why-us-tabs col-md-6 col-lg-3 pt-4">
 					<div class="d-flex justify-content-center">
 						<img src="img/why-license-icon.svg" alt="">
 					</div>
@@ -195,7 +195,7 @@
 	</section>
 	<!-- Почему мы. Конец. -->
 	<!-- Наши тарифы. Начало. -->
-	<section class="rate pt-5">
+	<section class="rate py-5">
 		<div class="container">
 			<div class="rate-title pb-3">
 				<h2 class="text-white fs48 font-weight-bold text-center text-md-left">Наши <span class="text-orange fs48 font-weight-bold">тарифы</span></h2>
@@ -263,10 +263,10 @@
 	</section>
 	<!-- Наши тарифы. Конец. -->
 	<!-- Первые в Нижнем. Начало. -->
-	<section class="first pt-lg-5 py-4 py-lg-0 my-4 my-lg-0">
+	<section class="first py-5 my-4 my-lg-0">
 		<div class="container">
 			<div class="first-title pb-lg-3">
-				<h2 class="text-white text-lg-dark fs48 font-weight-bold text-center text-lg-left">Первые <span class="text-white text-lg-orange fs48 font-weight-bold">в Нижнем</span></h2>
+				<h2 class="text-white fs48 font-weight-bold text-center text-lg-left">Первые <span class="text-white text-lg-orange fs48 font-weight-bold">в Нижнем</span></h2>
 			</div>
 			<div class="first-content row d-flex justify-content-center my-lg-4">
 				<div class="first-content-text col-12 col-lg-6 bg-light pb-3 mt-auto">
@@ -283,7 +283,7 @@
 	</section>
 	<!-- Первые в Нижнем. Конец. -->
 	<!-- Заказжи такси. Начало. -->
-	<section class="zakaz-taxi pt-5 bg-light">
+	<section class="zakaz-taxi py-5 bg-light">
 		<div class="container">
 			<div class="zakaz-taxi-title pb-3">
 				<h3 class="text-left fs24 font-weight-bold text-center text-md-left">Закажи такси прямо сейчас</h3>
@@ -313,7 +313,7 @@
 	</section>
 	<!-- Заказжи такси. конец. -->
 	<!-- Не только такси. Начало -->
-	<section class="not-taxi pt-lg-5 py-4 py-lg-0 my-4 my-lg-0">
+	<section class="not-taxi py-5">
 		<div class="container">
 			<div class="not-taxi-title pb-lg-3">
 				<h2 class="text-white text-lg-dark text-center text-lg-left text-lg-left fs48 font-weight-bold">Мы - <span class="text-white text-orange text-center text-lg-left fs48 font-weight-bold">не только такси</span></h2>
@@ -333,7 +333,7 @@
 	</section>
 	<!-- Не только такси. Конец -->
 	<!-- Связаться с нами. Начало -->
-	<section class="contact-us pt-5">
+	<section class="contact-us py-5">
 		<div class="container">
 			<div class="contact-title pb-5">
 				<h2 class="text-dark fs48 font-weight-bold text-center text-md-left">Связаться<span class="text-orange fs48 font-weight-bold"> с нами</span></h2>
@@ -423,32 +423,27 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+				<h5 class="modal-title" id="exampleModalLabel">Обратный звонок</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
 			<div class="modal-body">
 				<form>
-					<div class="form-group">
-						<label for="exampleInputEmail1">Email address</label>
-						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-						<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+					<div class="col-auto">
+						<label class="sr-only" for="inlineFormInputGroup">Username</label>
+						<div class="input-group mb-2">
+							<div class="input-group-prepend">
+								<div class="input-group-text">+7</div>
+							</div>
+							<input type="text" class="form-control" id="inlineFormInputGroup" placeholder="">
+						</div>
+						<div class="btn d-flex justify-content-end p-0">
+							<button type="button" class="btn btn-orange mt-2 fs18">Перезвоните мне</button>
+						</div>
+
 					</div>
-					<div class="form-group">
-						<label for="exampleInputPassword1">Password</label>
-						<input type="password" class="form-control" id="exampleInputPassword1">
-					</div>
-					<div class="form-group form-check">
-						<input type="checkbox" class="form-check-input" id="exampleCheck1">
-						<label class="form-check-label" for="exampleCheck1">Check me out</label>
-					</div>
-					<button type="submit" class="btn btn-primary">Submit</button>
 				</form>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
 			</div>
 		</div>
 	</div>
