тёмкины доп квесты вариант 6

--- a/app/index.html
+++ b/app/index.html
@@ -313,7 +313,7 @@
 	</section>
 	<!-- Заказжи такси. конец. -->
 	<!-- Не только такси. Начало -->
-	<section class="not-taxi py-5">
+	<section class="not-taxi py-5 my-4 my-lg-0">
 		<div class="container">
 			<div class="not-taxi-title pb-lg-3">
 				<h2 class="text-white text-lg-dark text-center text-lg-left text-lg-left fs48 font-weight-bold">Мы - <span class="text-white text-orange text-center text-lg-left fs48 font-weight-bold">не только такси</span></h2>
@@ -333,7 +333,7 @@
 	</section>
 	<!-- Не только такси. Конец -->
 	<!-- Связаться с нами. Начало -->
-	<section class="contact-us py-5">
+	<section class="contact-us pt-5">
 		<div class="container">
 			<div class="contact-title pb-5">
 				<h2 class="text-dark fs48 font-weight-bold text-center text-md-left">Связаться<span class="text-orange fs48 font-weight-bold"> с нами</span></h2>
