тёмкины доп квесты вариант 7

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -84,8 +84,8 @@
                             <div class="cont-comment d-flex mt-3">
                                 <textarea name="" id="" cols="70" rows="4" placeholder="Ваш вопрос"></textarea>
                             </div>
-                            <div class="cont-button d-flex flex-wrap justify-content-between mt-3 mt-xl-2">
-                                <h4 class="contact-button-policity fs13 text-white text-center text-lg-left font-weight-normal">«Нажимая на кнопку, вы даете согласие на
+                            <div class="cont-button d-flex flex-wrap justify-content-center justify-content-lg-between mt-3 mt-xl-2">
+                                <h4 class="contact-button-policity fs13 text-white text-center font-weight-normal">«Нажимая на кнопку, вы даете согласие на
                                     <br> обработку персональных данных и <br> соглашаетесь c политикой конфиденциальности»</h4>
                                 <button class="btn btn-orange fs24 text-white font-weight-bold col-12 col-md-5 my-2 py-3 py-xl-4 w-100 mt-3 mt-lg-0">Отправить</button>
                             </div>
