--- a/app/taxi-guest.html
+++ b/app/taxi-guest.html
@@ -112,7 +112,7 @@
     </section>
     <!-- Такси для гостей. Конец. -->
     <!-- Заказжи такси. Начало. -->
-    <section class="zakaz-taxi pt-5 bg-light">
+    <section class="zakaz-taxi py-5 bg-light">
         <div class="container">
             <div class="zakaz-taxi-title pb-3">
                 <h3 class="text-left fs24 font-weight-bold text-center text-md-left">Закажи такси прямо сейчас</h3>
@@ -133,7 +133,7 @@
             </div>
             <div class="zakaz-taxi-checkbox row d-flex justify-content-lg-between">
                 <div class="d-flex col-12 mt-2">
-                    <p class="checkbox-politicy text-center text-md-left fs13">«Нажимая на кнопку, вы даете согласие на обработку
+                    <p class="checkbox-politicy text-center text-md-left mt-2 mb-0 fs13">«Нажимая на кнопку, вы даете согласие на обработку
                         <a href="">персональных данных</a> и соглашаетесь c <a href="">политикой конфиденциальности</a>»</p>
                 </div>
 
