--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,7 @@
 			</div>
 			<div class="zakaz-taxi-checkbox row d-flex justify-content-lg-between">
 				<div class="d-flex col-12 mt-2">
-					<p class="checkbox-politicy text-center text-md-left fs13">«Нажимая на кнопку, вы даете согласие на обработку
+					<p class="checkbox-politicy text-center text-md-left mt-2 mb-0 fs13">«Нажимая на кнопку, вы даете согласие на обработку
 						<a href="">персональных данных</a> и соглашаетесь c <a href="">политикой конфиденциальности</a>»</p>
 				</div>
 
@@ -246,7 +246,7 @@
 					<div class="rate-tabs-section col-sm-6 col-lg-3">
 						<div class="rate-tabs bg-white">
 							<h3 class="rate-title text-dark text-center fs24 font-weight-bold pt-4">Трезвый водитель</h3>
-							<p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Заберём из любой точки</p>
+							<p class="rate-subtitle text-dark text-center fs18 mb-0 mt-2 pb-4">Заберём из <br class="d-none d-lg-block"> любой точки</p>
 							<p class="text-dark text-center fs18 mb-0">500р посадка</p>
 							<p class="text-dark text-center fs18 mb-0">90р километр</p>
 							<p class="text-dark text-center fs18 mb-0 pb-3">90р минута пути</p>
@@ -304,7 +304,7 @@
 			</div>
 			<div class="zakaz-taxi-checkbox row d-flex justify-content-lg-between">
 				<div class="d-flex col-12 mt-2">
-					<p class="checkbox-politicy text-center text-md-left fs13">«Нажимая на кнопку, вы даете согласие на обработку
+					<p class="checkbox-politicy text-center text-md-left mt-2 mb-0 fs13">«Нажимая на кнопку, вы даете согласие на обработку
 						<a href="">персональных данных</a> и соглашаетесь c <a href="">политикой конфиденциальности</a>»</p>
 				</div>
 
@@ -353,7 +353,7 @@
 						</div>
 						<div class="contact-button col-12 col-lg-3">
 							<button class="btn btn-orange py-4 w-100 mt-4 mt-lg-0">Заказать</button>
-							<h4 class="contact-button-policity fs13 text-white font-weight-normal mt-2 text-center text-md-left">«Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь c политикой конфиденциальности»</h4>
+							<h4 class="contact-button-policity fs13 text-white font-weight-normal mt-3 text-center text-md-left">«Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь c политикой конфиденциальности»</h4>
 						</div>
 					</div>
 				</div>
